--- a/style.css
+++ b/style.css
@@ -5,15 +5,16 @@ html{
 }
 
 body{
-    background-color: rgb(250, 202, 144);
+    background-color: rgb(0, 0, 0);
     margin: 0;
     padding: 0;
+    color:white;
 }
 
 header{
     padding: 7px 7px 0;
     margin: 0;
-    background-color: rgb(215, 25, 25);
+    background-color: rgb(5, 1, 119);
 }
 
 header h1{
