--- a/style.css
+++ b/style.css
@@ -12,12 +12,12 @@ body{
 }
 
 header{
-    padding: 7px 7px 0;
+    padding: 7px ;
     margin: 0;
     background-color: rgb(5, 1, 119);
 }
 
-header h1{
+h1{
     padding: 2;
     margin: 10px 0 15px 0;
 }
